<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_shadow"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_dp"
   >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/msg_enough_coin"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/drop_shadow" />

        <TextView
            android:id="@+id/title_coin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="5dp"
            android:text="@string/coin_message"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_10dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_dp"
            android:layout_weight="1"
            android:background="@drawable/left_btn_bg"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/skip"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/watch_now"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_dp"
            android:layout_marginEnd="@dimen/margin_dp"
            android:layout_weight="1"
            android:background="@drawable/right_btn_bg"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/msg_watch_video"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>

