<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_10dp"
    android:background="@drawable/card_shadow"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:gravity="center|top"
            android:padding="7dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:gravity="center"
                android:text="@string/msg_alert_leave"
                android:textColor="@color/black"
                android:textSize="@dimen/mid_text" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="@dimen/margin_dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/btnNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_dp"
                android:layout_marginEnd="@dimen/margin_dp"
                android:layout_weight="1"
                android:background="@drawable/left_btn_bg"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/no"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_ok"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_dp"
                android:layout_marginEnd="@dimen/margin_dp"
                android:layout_weight="1"
                android:background="@drawable/right_btn_bg"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/yes"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

