<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_dp"
    android:background="@drawable/card_shadow"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:gravity="center"
        android:padding="@dimen/margin_10dp"
        android:text="@string/title_already_used"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_10dp">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/drop_shadow" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"

            android:text="@string/msg_lifeline_used"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:layout_margin="@dimen/margin_dp"
        android:background="@drawable/left_btn_bg"
        android:gravity="center"
        android:paddingStart="@dimen/circle_height"
        android:paddingTop="7dp"
        android:paddingEnd="@dimen/circle_height"
        android:paddingBottom="7dp"
        android:text="@string/ok"
        android:textColor="@color/black"
        android:textSize="@dimen/mid_text"
        android:textStyle="bold" />
</LinearLayout>